# momh

./: .gitignore  API_CONTRACT.md  EDA_Utlandsstudier.ipynb  Makefile  README.md  WAY_OF_WORKING.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  csn_data.json  main.py  mlflow.db  requirements.txt
backend/app/: main.py
backend/app/aterbetalning/: api.py  rag.py
backend/app/utlandsstudier/: chunker.py  embeddings.py  rag.py
backend/aterbetalning/: main.py
backend/aterbetalning/rag/: pipeline.py  retriever.py
backend/backend/: main.py
backend/csn_vector_store/: index.faiss  index.pkl
backend/mlruns/1/423c0b396e5b457caa405428880fef6c/artifacts/: answer_v2.txt  prompt_v2.txt
backend/rag/: evaluation.py  mlflow_tracking.py  pipeline.py  retriever.py
backend/templates/: index.html
backend/utlandsstudier/: main.py
backend/utlandsstudier/rag/: pipeline.py  retriever.py
frontend/: Dockerfile  app_monatest.py  henke_test.py  mlflow.Dockerfile  streamlit_app.py
mlruns/1/73829fcdfe804b028bcf0d33e0125d21/artifacts/: question.txt  response.txt
mlruns/1/7c5702d4a4f24e2580be4efcbf1c161b/artifacts/: question.txt  response.txt
mlruns/1/917efaf5fe564ec6b772542b743bdb76/artifacts/: response.txt
mlruns/1/9ebd8b0397694dd4ada5947da06d3e0f/artifacts/: question.txt  response.txt
mlruns/1/cf8e59b802f8496e8c5207bc0c189dce/artifacts/: question.txt  response.txt
src/momh/backend/app/: main.py
src/momh/backend/rag/: evaluation.py  mlflow_tracking.py  retriever.py
(+15 files in other folders)
